codex-rs/tui/src/airs_mcp_manager/snapshots/codex_tui__airs_mcp_manager__authorization__tests__airs_mcp_browser_unavailable.snap
---
source: tui/src/airs_mcp_manager/authorization_tests.rs
expression: "render(&view, 80, 20)"
---
Sign in to gateway MCP
Waiting for browser approval

Open the link on your laptop or phone. After SSO and consent, a localhost page
may fail to load. Copy its entire address, paste it below, then press Enter.
AIRS continues here.
Paste callback URL here (hidden)
Browser could not open. Use the link below on a device with a browser.

Authorization link · Ctrl+Y copies the full link
https://auth.example/authorize








Ctrl+O open here · Ctrl+Y copy · Ctrl+U clear · PgUp/PgDn scroll · Esc cancel
